<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/pop_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_marginHorizontal="@dimen/base_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height"
        android:orientation="horizontal">
        <TextView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dp"
            android:gravity="center_vertical"
            android:text="@string/title_ip"
            android:textColor="@color/popTextColor"/>

        <EditText
            android:id="@+id/ip_editor"
            android:maxLength="15"
            android:maxLines="1"
            android:hint="Input the server ip"
            android:textColorHint="@color/light_0"
            android:textCursorDrawable="@drawable/editor_text_cursor"
            android:drawableBottom="@drawable/editor_text_select"
            android:background="@color/empty"
            android:textColor="@color/popTextColor"
            android:textSize="15dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginHorizontal="@dimen/base_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height"
        android:orientation="horizontal">
        <TextView
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="6dp"
            android:gravity="center_vertical"
            android:text="@string/title_port"
            android:textColor="@color/popTextColor"/>

        <EditText
            android:id="@+id/port_editor"
            android:hint="Input the server port"
            android:textColorHint="@color/light_0"
            android:textCursorDrawable="@drawable/editor_text_cursor"
            android:drawableBottom="@drawable/editor_text_select"
            android:textColor="@color/popTextColor"
            android:background="@color/empty"
            android:textSize="15dp"
            android:inputType="number"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="30dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginHorizontal="@dimen/base_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/auto_checkbox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/custom_checkbox_style"
            android:textColor="@color/popTextColor"
            android:textSize="14dp"
            android:text="@string/auto_connect"/>
    </LinearLayout>


    <RelativeLayout
        android:layout_marginHorizontal="@dimen/base_margin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/setting_item_height"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <Button
            android:id="@+id/conn_setting_cancel"
            android:layout_gravity="center"
            android:background="@drawable/pop_button"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:textAllCaps="false"
            android:text="@string/cancel"/>
        <Button
            android:id="@+id/conn_setting_confirm"
            android:layout_gravity="center"
            android:background="@drawable/pop_button"
            android:layout_alignParentRight="true"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:textAllCaps="false"
            android:text="@string/connect"/>
    </RelativeLayout>


</LinearLayout>